[package]
name = "minesweeper_gui"
version = "0.1.0"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
minesweeper = { path = "../minesweeper/" }

egui = "0.31"
catppuccin-egui = { version = "*", default-features = false, features = [
  "egui31",
] }
# For image support:
egui_extras = { version = "*", features = ["svg"] }

eframe = { version = "0.31", default-features = false, features = [
  # "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
  "default_fonts", # Embed the default egui fonts.
  "glow",          # Use the glow rendering backend. Alternative: "wgpu".
  # "persistence",   # Enable restoring app state when restarting the app.
  "wayland", # To support Linux (and CI)
  "x11",     # To support older Linux distributions (restores one of the default features)
] }
log = "0.4.27"

# You only need serde if you want app persistence:
# serde = { version = "1.0.219", features = ["derive"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.8"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.70"                                      # to access the DOM (to hide the loading text)
getrandom = { version = "0.3", features = ["wasm_js"] }

[profile.release]
opt-level = 'z'
